--- a/src/style.css
+++ b/src/style.css
@@ -7,3 +7,24 @@
     border-radius: 50%;
     margin-right: 20px;
 }
+
+#projects {
+    display: flex;
+    flex-direction: row;
+}
+
+.project {
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+    list-style: none;
+    border: 1px dotted black;
+}
+.project-img {
+    width: 300px;
+    height: 200px;
+}
+
+.project-title {
+    font-size: x-large;
+}
