--- a/src/style.css
+++ b/src/style.css
@@ -38,7 +38,7 @@
 }
 
 .category {
-    background-color: cadetblue;
+    background-color: #cacaca;
     border-radius: 25px;
     margin: 5px;
     padding: 5px;
