--- a/src/style.css
+++ b/src/style.css
@@ -32,6 +32,10 @@
     font-size: x-large;
 }
 
+.introduces li {
+    margin: 10px 0;
+}
+
 .categories {
     display: flex;
     flex-direction: row;
